fix the landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -43,7 +43,6 @@
             Sign Up <i class="fa fa-caret-down"></i>
           </button>
           <div class="sign-up-dropdown" id="signup-dropdown">
-            <a href="#" onclick="displayAdminSignUp()">As Admin</a>
             <a href="#" onclick="displayCustomerSignUp()">As Customer</a>
           </div>
         </div>
@@ -79,6 +78,36 @@
             <input type="text" name="email" />
           </div>
 
+          <div class="email">
+            <label for="">Street</label>
+            <input type="text" name="street" />
+          </div>
+
+          <div class="email">
+            <label for="">Barangay</label>
+            <input type="text" name="barangay" />
+          </div>
+
+          <div class="email">
+            <label for="">Municipality</label>
+            <input type="text" name="municipality" />
+          </div>
+
+          <div class="email">
+            <label for="">Province</label>
+            <input type="text" name="province" />
+          </div>
+
+          <div class="email">
+            <label for="">Country</label>
+            <input type="text" name="country" />
+          </div>
+
+          <div class="email">
+            <label for="">Postal Code</label>
+            <input type="text" name="postalcode" />
+          </div>
+
           <div class="password">
             <div class="show-password-container">
               <label for="">Password</label>
@@ -96,50 +125,6 @@
               type="password"
               name="reapet-password"
               id="cusSignUpRepPass"
-            />
-          </div>
-
-          <div class="button-container">
-            <input type="submit" value="Sign Up" class="sign-up-button" />
-          </div>
-        </form>
-      </div>
-
-      <div class="admin-signup-form-container" id="admin-sign-up">
-        <p>Sign Up as Admin</p>
-        <form action="" class="admin-sign-up">
-          <div class="last-name">
-            <label for="">Last Name</label>
-            <input type="text" name="last-name" />
-          </div>
-
-          <div class="first-name">
-            <label for="">First Name</label>
-            <input type="text" name="first-name" />
-          </div>
-
-          <div class="email">
-            <label for="">Email</label>
-            <input type="text" name="email" />
-          </div>
-
-          <div class="password">
-            <div class="show-password-container">
-              <label for="">Password</label>
-              <input type="checkbox" onclick="adminSignUp()" />
-            </div>
-            <input type="password" name="password" id="adminSignUpPass" />
-          </div>
-
-          <div class="repeat-password">
-            <div class="show-password-container">
-              <label for="">Repeat Password</label>
-              <input type="checkbox" onclick="adminSignUpRep()" />
-            </div>
-            <input
-              type="password"
-              name="reapet-password"
-              id="adminSignUpRepPass"
             />
           </div>
 
