--- a/admin_panel/invoice_template.html
+++ b/admin_panel/invoice_template.html
@@ -43,7 +43,7 @@
     </table>
     <p class="tax">Tax: {{tax}}</p>
     <p class="shipping">Shipping Fee: {{shipping}}</p>
-    <p class="total">Grand Total: {{grand_total}}</p>
-    <p>We appreciate your business!</p>
+    <p class="total">Total Amount: {{grand_total}}</p>
+    <p>We appreciate your order!</p>
   </body>
 </html>
