fix the currency symbol

--- a/admin_panel/invoice_template.html
+++ b/admin_panel/invoice_template.html
@@ -22,6 +22,13 @@
       .total .tax .shipping {
         font-weight: bold;
       }
+      @font-face {
+        font-family: "DejaVu Sans";
+        src: url("assests/DejaVuSans.ttf") format("truetype");
+      }
+      body {
+        font-family: "DejaVu Sans", Arial, sans-serif;
+      }
     </style>
   </head>
   <body>
